gitTestProject/src/objects/Customer__c.object
<CustomObject>
    <description>List of users</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <label>Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Fiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Fiction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sub_Categories__c</fullName>
        <label>Sub Categories</label>
        <picklist>
            <controllingField>Categories__c</controllingField>
            <picklistValues>
                <fullName>Children Fiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fantasy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thriller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comedy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self-help</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spiritual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biographies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspiration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Customer #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>